--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -116,7 +116,6 @@ set_real_ip_from 109.70.100.68;
 set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
-set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.78.28.175;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
@@ -288,6 +287,7 @@ set_real_ip_from 185.183.159.40;
 set_real_ip_from 185.191.204.254;
 set_real_ip_from 185.193.158.134;
 set_real_ip_from 185.193.52.180;
+set_real_ip_from 185.193.66.127;
 set_real_ip_from 185.195.71.10;
 set_real_ip_from 185.195.71.11;
 set_real_ip_from 185.195.71.12;
@@ -662,6 +662,7 @@ set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
+set_real_ip_from 198.12.111.102;
 set_real_ip_from 198.23.133.132;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
@@ -809,7 +810,6 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
 set_real_ip_from 2001:bf0:666::666;
@@ -992,6 +992,7 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.94.133.162;
 set_real_ip_from 23.94.211.25;
@@ -1015,6 +1016,7 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::2;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:fc24:12:759::1;
 set_real_ip_from 2602:fc24:12:77c0::1;
@@ -1612,6 +1614,7 @@ set_real_ip_from 2a12:8641:3:24::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 34.193.77.16;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 37.1.201.144;
@@ -1763,7 +1766,6 @@ set_real_ip_from 54.36.209.254;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
-set_real_ip_from 54.80.234.208;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
