--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -150,7 +150,6 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -247,6 +246,7 @@ allow 185.100.87.41;
 allow 185.10.16.41;
 allow 185.106.94.195;
 allow 185.107.70.56;
+allow 185.11.139.198;
 allow 185.113.128.30;
 allow 185.126.117.21;
 allow 185.129.61.1;
@@ -653,6 +653,8 @@ allow 194.164.122.21;
 allow 194.233.174.56;
 allow 194.26.192.64;
 allow 194.26.192.77;
+allow 194.26.196.116;
+allow 194.26.196.71;
 allow 195.160.220.104;
 allow 195.176.3.19;
 allow 195.176.3.20;
@@ -990,7 +992,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
 allow 23.155.8.104;
-allow 23.22.108.79;
 allow 23.236.122.62;
 allow 23.94.133.162;
 allow 23.94.211.25;
@@ -1240,6 +1241,7 @@ allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3f::c0cc:69;
 allow 2a00:1728:3f::c0cc:80;
 allow 2a00:1728:f:f:f:f:c03c:9898;
+allow 2a00:17d8:100:1::fd1;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
@@ -1612,6 +1614,7 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.42.185.134;
+allow 3.208.226.155;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1695,6 +1698,7 @@ allow 45.95.169.227;
 allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.230;
+allow 45.95.169.255;
 allow 45.95.202.48;
 allow 46.165.243.36;
 allow 46.182.21.248;
@@ -1814,7 +1818,6 @@ allow 82.153.138.48;
 allow 82.221.131.5;
 allow 82.221.131.71;
 allow 82.221.139.190;
-allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
