--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -35,6 +35,7 @@ set_real_ip_from 104.244.78.162;
 set_real_ip_from 104.244.78.233;
 set_real_ip_from 104.244.79.44;
 set_real_ip_from 104.244.79.50;
+set_real_ip_from 104.244.79.61;
 set_real_ip_from 107.172.13.143;
 set_real_ip_from 107.172.31.146;
 set_real_ip_from 107.172.31.165;
@@ -143,6 +144,7 @@ set_real_ip_from 146.59.35.38;
 set_real_ip_from 146.70.164.210;
 set_real_ip_from 146.70.81.186;
 set_real_ip_from 147.45.116.145;
+set_real_ip_from 147.45.78.34;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.22.133;
@@ -151,20 +153,14 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.247.72.192;
-set_real_ip_from 162.247.72.199;
-set_real_ip_from 162.247.74.200;
-set_real_ip_from 162.247.74.201;
 set_real_ip_from 162.247.74.202;
-set_real_ip_from 162.247.74.204;
 set_real_ip_from 162.247.74.206;
 set_real_ip_from 162.247.74.213;
 set_real_ip_from 162.247.74.216;
 set_real_ip_from 162.247.74.217;
 set_real_ip_from 162.247.74.27;
 set_real_ip_from 162.247.74.7;
-set_real_ip_from 162.247.74.74;
 set_real_ip_from 162.251.5.152;
 set_real_ip_from 163.172.45.102;
 set_real_ip_from 163.5.143.76;
@@ -273,6 +269,7 @@ set_real_ip_from 185.146.232.243;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -486,11 +483,8 @@ set_real_ip_from 185.220.101.96;
 set_real_ip_from 185.220.101.97;
 set_real_ip_from 185.220.101.98;
 set_real_ip_from 185.220.101.99;
-set_real_ip_from 185.220.103.4;
 set_real_ip_from 185.220.103.5;
-set_real_ip_from 185.220.103.6;
 set_real_ip_from 185.220.103.7;
-set_real_ip_from 185.220.103.8;
 set_real_ip_from 185.220.103.9;
 set_real_ip_from 185.225.69.203;
 set_real_ip_from 185.225.69.232;
@@ -663,6 +657,7 @@ set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.12.111.102;
+set_real_ip_from 198.167.206.210;
 set_real_ip_from 198.23.133.132;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
@@ -1015,7 +1010,6 @@ set_real_ip_from 2602:fc24:19:30::1;
 set_real_ip_from 2602:fc24:19:95b7::1;
 set_real_ip_from 2602:fccf:310:1::a;
 set_real_ip_from 2602:fccf:310:1::b;
-set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:b480:3:6::2;
@@ -1091,6 +1085,7 @@ set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 set_real_ip_from 2605:6400:30:f414:42ce:c612:dab8:1337;
 set_real_ip_from 2605:6400:30:f440:757e:adf1:55f7:5a31;
 set_real_ip_from 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
+set_real_ip_from 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
 set_real_ip_from 2605:6400:30:f503::1;
 set_real_ip_from 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
 set_real_ip_from 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
@@ -1247,6 +1242,7 @@ set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
+set_real_ip_from 2a02:6f8:2020:206:b::210;
 set_real_ip_from 2a02:7aa0:1619::ba45:e7f2;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
@@ -1711,6 +1707,7 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
+set_real_ip_from 52.203.117.43;
 set_real_ip_from 5.255.100.126;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.26;
@@ -1740,7 +1737,6 @@ set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
-set_real_ip_from 54.160.123.1;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
