--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -111,6 +111,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -125,6 +126,7 @@ allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e6:0:6::;
+allow 2602:fafd:f0e:2c::a;
 allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
