--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,3 +1,4 @@
+allow 100.28.11.122;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -115,7 +116,6 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
-allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -153,7 +153,6 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.251.5.152;
 allow 163.172.45.102;
 allow 163.5.143.76;
@@ -262,11 +261,9 @@ allow 185.146.232.243;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
-allow 185.181.60.135;
 allow 185.181.61.115;
 allow 185.181.61.142;
 allow 185.181.61.18;
@@ -632,7 +629,6 @@ allow 193.35.18.49;
 allow 193.35.18.77;
 allow 194.15.112.133;
 allow 194.15.113.118;
-allow 194.15.115.212;
 allow 194.163.157.49;
 allow 194.164.122.21;
 allow 194.233.174.56;
@@ -795,7 +791,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -980,6 +975,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.133.162;
 allow 23.94.211.25;
@@ -1003,6 +999,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fafd:f0e:2c::a;
 allow 2602:fc24:12:759::1;
@@ -1691,8 +1688,6 @@ allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
-allow 50.3.182.133;
-allow 50.3.182.156;
 allow 51.15.249.160;
 allow 51.15.59.15;
 allow 51.158.115.62;
@@ -1711,7 +1706,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.200.236.194;
 allow 5.255.100.126;
 allow 5.255.100.219;
 allow 5.255.100.26;
