--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -111,7 +111,6 @@ deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
 deny 2001:bf0:666::666;
@@ -125,6 +124,7 @@ deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::2;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
+deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:fafd:f0e:2c::a;
 deny 2602:fc24:12:759::1;
